--- a/index.html
+++ b/index.html
@@ -8,72 +8,80 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студія</a></li>
+    <header class="top">
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студія</a></li>
+            <!--pointers-->
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li><a href="mailto:info@devstudio.com" class="meltel">info@devstudio.com</a></li>
           <!--pointers-->
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="tel:+380961111111" class="meltel">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li><a href="mailto:info@devstudio.com" class="meltel">info@devstudio.com</a></li>
-        <!--pointers-->
-        <li><a href="tel:+380961111111" class="meltel">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <div>
-        <section class="hero">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
           <button type="button" class="button-main">Замовити послугу</button>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <section class="section">
-        <h2 class="section-titlef">Особливості</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-ti">Увага до деталей</h3>
-            <p class="description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-          </li>
-          <li>
-            <h3 class="section-ti">Пунктуальність</h3>
-            <p class="description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-          </li>
-          <li>
-            <h3 class="section-ti">Планування</h3>
-            <p class="description">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li>
-            <h3 class="section-ti">Сучасні технології</h3>
-            <p class="description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-titlef">Особливості</h2>
+          <ul class="list">
+            <li>
+              <h3 class="section-ti">Увага до деталей</h3>
+              <p class="description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+              <h3 class="section-ti">Пунктуальність</h3>
+              <p class="description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+              <h3 class="section-ti">Планування</h3>
+              <p class="description">Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+              <h3 class="section-ti">Сучасні технології</h3>
+              <p class="description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box1.jpg" width="370" alt="людина програмує" />
-          </li>
-          <li>
-            <img src="./images/box2.jpg" width="370" alt="людина вибирає дизайн" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" width="370" alt="людина вибирає колір" />
-          </li>
-        </ul>
+      <section class="section-wwd">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/box1.jpg" width="370" alt="людина програмує" />
+            </li>
+            <li>
+              <img src="./images/box2.jpg" width="370" alt="людина вибирає дизайн" />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" width="370" alt="людина вибирає колір" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-team">
-        <h2 class="section-title">Наша команда</h2>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li>
             <img src="./images/img1.jpg" width="270" alt="Ігор Дем'яненко Product Designer" />
@@ -96,25 +104,23 @@
             <p class="section-ti-sec-descr">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-foot"><span class="logo-span">Web</span>Studio</a>
-      <address class="footadd">
-        <ul class="address list">
-          <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="address-link"
-              >м. Київ, пр-т Лесі Українки,26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com" class="address-mt">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="address-mt">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo-foot"><span class="logo-span">Web</span>Studio</a>
+        <address class="footadd">
+          <ul class="address list">
+            <li>
+              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="address-link">м.
+                Київ, пр-т Лесі Українки,26</a>
+            </li>
+            <li><a href="mailto:info@devstudio.com" class="address-mt">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="address-mt">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
