Добавил геометрию к portfolio

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-wwd">
+      <section class="section wwd">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="list">
@@ -79,29 +79,37 @@
           </ul>
         </div>
       </section>
-      <section class="section-team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li>
-            <img src="./images/img1.jpg" width="270" alt="Ігор Дем'яненко Product Designer" />
-            <h3 class="section-ti-sec">Ігор Дем'яненко</h3>
-            <p class="section-ti-sec-descr">Product Designer</p>
+            <img src="./images/img1.jpg" width="270" alt="Ігор Дем'яненко Product Designer" class="img-desc"/>
+            <div class="description-p">
+              <h3 class="section-ti-sec">Ігор Дем'яненко</h3>
+              <p class="section-ti-sec-descr">Product Designer</p>
+            </div>
           </li>
           <li>
-            <img src="./images/img2.jpg" width="270" alt="Ольга Рєпіна Frontend Developer" />
-            <h3 class="section-ti-sec">Ольга Рєпіна</h3>
-            <p class="section-ti-sec-descr">Frontend Developer</p>
+            <img src="./images/img2.jpg" width="270" alt="Ольга Рєпіна Frontend Developer" class="img-desc"/>
+            <div class="description-p">
+              <h3 class="section-ti-sec">Ольга Рєпіна</h3>
+              <p class="section-ti-sec-descr">Frontend Developer</p>
+            </div>
           </li>
           <li>
-            <img src="./images/img3.jpg" width="270" alt="Микола Тарасов Marketing" />
-            <h3 class="section-ti-sec">Микола Тарасов</h3>
-            <p class="section-ti-sec-descr">Marketing</p>
+            <img src="./images/img3.jpg" width="270" alt="Микола Тарасов Marketing" class="img-desc"/>
+            <div class="description-p">
+              <h3 class="section-ti-sec">Микола Тарасов</h3>
+              <p class="section-ti-sec-descr">Marketing</p>
+            </div>
           </li>
           <li>
-            <img src="./images/img4.jpg" width="270" alt="Михайло Єрмаков UI Designer" />
-            <h3 class="section-ti-sec">Михайло Єрмаков</h3>
-            <p class="section-ti-sec-descr">UI Designer</p>
+            <img src="./images/img4.jpg" width="270" alt="Михайло Єрмаков UI Designer" class="img-desc"/>
+            <div class="description-p">
+              <h3 class="section-ti-sec">Михайло Єрмаков</h3>
+              <p class="section-ti-sec-descr">UI Designer</p>
+            </div>
           </li>
         </ul>
         </div>
@@ -113,10 +121,10 @@
         <address class="footadd">
           <ul class="address list">
             <li>
-              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="address-link">м.
+              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="address-link forreatr">м.
                 Київ, пр-т Лесі Українки,26</a>
             </li>
-            <li><a href="mailto:info@devstudio.com" class="address-mt">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com" class="address-mt forreatr">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="address-mt">+38 096 111 11 11</a></li>
           </ul>
         </address>
