--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav>
           <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link current">Студія</a></li>
+            <li class="items"><a href="./index.html" class="link current">Студія</a></li>
             <!--pointers-->
-            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li><a href="" class="link">Контакти</a></li>
+            <li class="items"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li class="items"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
@@ -42,7 +42,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="section-titlef">Особливості</h2>
+          <h2 class="visually-hidden">Особливості</h2>
           <ul class="list">
             <li>
               <h3 class="section-ti">Увага до деталей</h3>
