Добавил flex свойства main index

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="list">
+          <ul class="list flex">
             <li>
               <h3 class="section-ti">Увага до деталей</h3>
               <p class="description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -66,7 +66,7 @@
       <section class="section wwd">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="list">
+          <ul class="list flex">
             <li>
               <img src="./images/box1.jpg" width="370" alt="людина програмує" />
             </li>
@@ -82,7 +82,7 @@
       <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
+        <ul class="list flex">
           <li>
             <img src="./images/img1.jpg" width="270" alt="Ігор Дем'яненко Product Designer" class="img-desc"/>
             <div class="description-p">
