--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
         <nav>
           <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студія</a></li>
+            <li class="items"><a href="./index.html" class="link">Студія</a></li>
             <!--pointers-->
-            <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li><a href="" class="link">Контакти</a></li>
+            <li class="items"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+            <li class="items"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
@@ -34,7 +34,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="section-titlef">Приклади</h1>
+          <h1 class="visually-hidden">Приклади</h1>
           <ul class="list butlist">
             <li><button type="button" class="buttons">Усі</button></li>
             <li><button type="button" class="buttons">Веб-сайти</button></li>
