Добавил ко всему flex свойства

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header class="top">
-      <div class="container">
-        <nav>
+      <div class="container main-header">
+        <nav class="main-header">
           <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="items"><a href="./index.html" class="link">Студія</a></li>
@@ -25,9 +25,9 @@
           </ul>
         </nav>
         <ul class="contacts list">
-          <li><a href="mailto:info@devstudio.com" class="meltel">info@devstudio.com</a></li>
+          <li class="item"><a href="mailto:info@devstudio.com" class="meltel">info@devstudio.com</a></li>
           <!--pointers-->
-          <li><a href="tel:+380961111111" class="meltel">+38 096 111 11 11</a></li>
+          <li class="item"><a href="tel:+380961111111" class="meltel">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -36,15 +36,15 @@
         <div class="container">
           <h1 class="visually-hidden">Приклади</h1>
           <ul class="list butlist">
-            <li><button type="button" class="buttons">Усі</button></li>
-            <li><button type="button" class="buttons">Веб-сайти</button></li>
-            <li><button type="button" class="buttons">Додатки</button></li>
-            <li><button type="button" class="buttons">Дизайн</button></li>
-            <li><button type="button" class="buttons">Маркетинг</button></li>
+            <li class="but-sec"><button type="button" class="buttons">Усі</button></li>
+            <li class="but-sec"><button type="button" class="buttons">Веб-сайти</button></li>
+            <li class="but-sec"><button type="button" class="buttons">Додатки</button></li>
+            <li class="but-sec"><button type="button" class="buttons">Дизайн</button></li>
+            <li class="but-sec"><button type="button" class="buttons">Маркетинг</button></li>
           </ul>
           
-          <ul class="list">
-            <li>
+          <ul class="list product">
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp1.jpg" width="370" alt="комп'ютер" class="img-desc-w"/>
                 <div class="description-w">
@@ -53,7 +53,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp2.jpg" width="370" alt="дизайн постеру" class="img-desc-w"/>
                 <div class="description-w">
@@ -62,7 +62,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp3.jpg" width="370" alt="лейбл ресторану" class="img-desc-w"/>
                 <div class="description-w">
@@ -71,7 +71,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp4.jpg" width="370" alt="навушники лейбл" class="img-desc-w"/>
                 <div class="description-w">
@@ -80,7 +80,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element"> 
               <a href="" class="link">
                 <img src="./images/imgp5.jpg" width="370" alt="коробки лейбл" class="img-desc-w"/>
                 <div class="description-w">
@@ -89,7 +89,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp6.jpg" width="370" alt="комп'ютер сайт 1" class="img-desc-w"/>
                 <div class="description-w">
@@ -98,7 +98,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp7.jpg" width="370" alt="книжка лейбл" class="img-desc-w"/>
                 <div class="description-w">
@@ -107,7 +107,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element">
               <a href="" class="link">
                 <img src="./images/imgp8.jpg" width="370" alt="лейбл" class="img-desc-w"/>
                 <div class="description-w">
@@ -116,7 +116,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="product-element" class="but-sec">
               <a href="" class="link">
                 <img src="./images/imgp9.jpg" width="370" alt="комп'ютер сайт 2" class="img-desc-w"/>
                 <div class="description-w">
