--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header class="top">
-      <div class="container">
-        <nav>
+      <div class="container main-header">
+        <nav class="main-header">
           <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="items"><a href="./index.html" class="link current">Студія</a></li>
@@ -25,9 +25,9 @@
           </ul>
         </nav>
         <ul class="contacts list">
-          <li><a href="mailto:info@devstudio.com" class="meltel">info@devstudio.com</a></li>
+          <li class="item"><a href="mailto:info@devstudio.com" class="meltel">info@devstudio.com</a></li>
           <!--pointers-->
-          <li><a href="tel:+380961111111" class="meltel">+38 096 111 11 11</a></li>
+          <li class="item"><a href="tel:+380961111111" class="meltel">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
