--- a/portfolio.html
+++ b/portfolio.html
@@ -134,12 +134,12 @@
         <a href="./index.html" class="logo-foot"><span class="logo-span">Web</span>Studio</a>
         <address class="footadd">
           <ul class="address list">
-            <li>
-              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="address-link forreatr">м.
+            <li class=" forreatr">
+              <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="address-link">м.
                 Київ, пр-т Лесі Українки,26</a>
             </li>
-            <li><a href="mailto:info@devstudio.com" class="address-mt forreatr">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="address-mt">+38 096 111 11 11</a></li>
+            <li class=" forreatr"><a href="mailto:info@devstudio.com" class="address-mt">info@devstudio.com</a></li>
+            <li class=" forreatr"><a href="tel:+380961111111" class="address-mt">+38 096 111 11 11</a></li>
           </ul>
         </address>
       </div>
